noinst_LIBRARIES = libRNA2.a
 
libRNA2_a_SOURCES = alifold.c energy_par.c fold.c fold_vars.c params.c \
			ribo.c utils.c

noinst_HEADERS = alifold.h data_structures.h energy_const.h energy_par.h fold.h fold_vars.h \
			loop_energies.h pair_mat.h params.h utils.h \
			intl11.h intl11dH.h intl21.h intl21dH.h intl22.h intl22dH.h ribo.h \
			alicircfold.inc circfold.inc
			   
